[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "newbrain-router"
version = "0.1.0"
description = "Dry-run public agent-router templates with approval gates and mock executors."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{name = "SHawn"}]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.setuptools.packages.find]
where = ["src"]
